rest: refactor: avoid deprecated code